aux_source_directory (. SRC_LIST)
# add_definitions(-D DATABASE)
include_directories (${PROJECT_SOURCE_DIR}/include)
link_directories (${PROJECT_SOURCE_DIR}/lib)
add_compile_options(-std=c++11)
add_executable (nvlm ${SRC_LIST})
# target_link_libraries (nvlm glog nvidia-ml mysqlclient)
target_link_libraries (nvlm nvidia-ml)
set (EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
